<resources>
    <string name="app_name">Bus Tracking System</string>
    <string name="user_name">User Name</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">New User sign Up!</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="welcome_to_bus_tracking_system"> WELCOME TO BUS TRACKING SYSTEM </string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="register">REGISTER</string>
    <string name="current_location_area">Current Location/Area</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT</string>
    <string name="already_have_account_login">Already Have Account! Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="click_here_to_go_back">Click Here to Go Back</string>
    <string name="menu">Menu</string>
    <string name="histroy">Histroy </string>
    <string name="current_location">Current Location</string>
    <string name="user_details">user Details</string>
    <string name="fuel_details">Fuel Details</string>
    <string name="text_message">text message</string>
    <string name="feed_back">Feed back</string>
    <string name="fetch">Fetch</string>
    <string name="select_bus_number">Select Bus Number</string>
    <string name="title_activity_location">Map</string>
    <string name="enter_the_otp_here">Enter The OTP Here</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="already_registered_login">Already Registered? Login</string>
    <string name="go_back">GO BACK</string>
    <string name="paramaters">Paramaters</string>
    <string name="value">Value</string>
    <string name="unit">Unit</string>
    <string name="symobl">Symobl</string>
    <string name="back_to_string_menu">Back to menu</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="date_of_birth_in_dd_mm_yyyy_format">Date of birth in dd/mm/yyyy format</string>
    <string name="headlines"><b>Here you will know about your vehicle history details!</b></string>
    <string name="article">Description</string>
    <string name="go_back_to_menu">Go Back to Menu</string>
    <string name="write_your_feedback_here">Write your FEEDBACK here</string>
    <string name="describe_your_problem_suggestions">Describe your problem/suggestions</string>
    <string name="submit_feedback">submit feedback</string>
    <string name="chat_with_us_database">Chat With Management/ text Query </string>
    <string name="close">Close</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_with_email">Login with Email</string>
    <string name="email">Email</string>

    <string name="next">NEXT</string>
    <string name="new_user_register_here">New User Register Here</string>


    <string name="user_password">User Password</string>
    <string name="new_user_signup">New User? SignUp</string>

    <string name="complete_registration">Complete Registration</string>
    <string name="this_is_authentication_step">THIS IS AUTHENTICATION STEP \nPLEASE ENTER YOUR CORRECT  \tEMAIL ADRESS</string>
    <string name="textview">Please open Your Gmail and check forgot Password link! \nPassword Reset link will be sent to Your Registerd Email Id \n kindly check your Spam folder if the link is not appear in the inbox </string>

</resources>
